@@ -1,6 +1,7 @@
 phpSysInfo 3.1.3
 
  - [ADD] IPFire, ClearOS and RedHatEnterpriseServer to detected distros
+ - [ADD] MODE_POPEN parameter - use popen() PHP function to execute commands
 
  - [UPD] Added "username" to filtered mount credentials
 
